--- a/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
+++ b/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
@@ -114,7 +114,7 @@
 
                         <Button Text="Record Ducts" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnRecDucts" Command="{Binding ShowDuctPageCommand}"/>
                         <Button Text="Fiber" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnFiber" Clicked="btnFiber_Clicked"/>
-                        <!--<Button Text="Tracer" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnTracer" Clicked="btnTracer_Clicked"/> -->
+                       <Button Text="Tracer" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnTracer" Clicked="btnTracer_Clicked"/>
                         <Button Text="Connect Devices" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnConnectDevice" Clicked="btnConnectDevice_Clicked"/>
                         <Button Text="Complete This Trace" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnComplete" Clicked="btnComplete_Clicked"/>
                         <Button Text="Record Racks" IsEnabled="False" HorizontalOptions="FillAndExpand" x:Name="btnRecRacks" Clicked="btnRecRacks_Clicked"/>
