--- a/FTCollectorApp/View/SitesPage/DuctPage.xaml
+++ b/FTCollectorApp/View/SitesPage/DuctPage.xaml
@@ -16,21 +16,39 @@
                      <Label Text="Duct"  HorizontalOptions="Center" FontSize="Large" />
 
                     <Label Text="Host Tag Number "  />
-                    <local:BorderColorEntry x:Name="txtHostTagNumber" IsEnabled="False"/>
+                    <local:BorderColorEntry x:Name="txtHostTagNumber" Text="{Binding DefaultHostTagNumber}" IsEnabled="False"/>
 
                     <Label Text="Direction" />
-                    <local:Dropdown  ItemsSource="{Binding TravelDirectionList}" ItemDisplayBinding="{Binding CompassDirDesc}" 
+                    <local:Dropdown  ItemsSource="{Binding TravelDirectionList}" 
+                                     ItemDisplayBinding="{Binding CompassDirDesc}" 
+                                     SelectedItem="{Binding SelectedDirection, Mode=TwoWay}"
                              x:Name="pDirection" HorizontalOptions="FillAndExpand" SelectedIndexChanged="OnIndexChanged"/>
 
                     <Label Text="Direction Count" />
-                    <local:Dropdown2 x:Name="pDirCnt" HorizontalOptions="FillAndExpand"/>
+                    <local:Dropdown2 x:Name="pDirCnt" HorizontalOptions="FillAndExpand" 
+                                     SelectedItem="{Binding SelectedDirectionCnt}">
+                            <Picker.Items>
+                                <x:String>1</x:String>
+                                <x:String>2</x:String>
+                                <x:String>3</x:String>
+                                <x:String>4</x:String>
+                                <x:String>5</x:String>
+                                <x:String>6</x:String>
+                                <x:String>7</x:String>
+                                <x:String>8</x:String>
+                                <x:String>9</x:String>
+                                <x:String>10</x:String>
+                            </Picker.Items>
+                    </local:Dropdown2>
 
                     <Label Text="Conduit Diameter" />
                     <local:Dropdown ItemsSource="{Binding DuctSizeList}" ItemDisplayBinding="{Binding Ductsize}" 
+                                    SelectedItem="{Binding SelectedDuctSize, Mode=TwoWay}"
                              x:Name="pDuctSize" HorizontalOptions="FillAndExpand"/>
 
                     <Label Text="Color :" />
-                    <Button x:Name="btnSelectColor" Command="{Binding ShowPopupCommand}" BackgroundColor="{Binding SelectedColor.ColorHex}"
+                    <Button x:Name="btnSelectColor" Command="{Binding ShowPopupCommand}" 
+                            BackgroundColor="{Binding SelectedColor.ColorHex}"
                             Text="{Binding SelectedColor.ColorName}" TextColor="Black"/>                        
                     <!--<Picker ItemsSource="{Binding DuctColorCode}" TextColor="{Binding ColorHex}"
                            ItemDisplayBinding ="{Binding ColorName}" x:Name="pDuctColor" />-->
@@ -38,6 +56,7 @@
 
                         <Label Text="Duct Material :" />
                     <local:Dropdown  ItemsSource="{Binding DuctMaterialList}" ItemDisplayBinding="{Binding DucTypeDesc}" 
+                                     SelectedItem="{Binding SelectedDuctType, Mode=TwoWay}"
                              x:Name="pDuctMaterial" HorizontalOptions="FillAndExpand"/>
 
                     <Label Text="Duct Used :" />
@@ -46,35 +65,82 @@
 
                     <Label Text="Install Method :" />
                     <local:Dropdown ItemsSource="{Binding DuctInstallList}" ItemDisplayBinding="{Binding DuctInstallDesc}" 
+                             SelectedItem="{Binding SelectedDuctInstallType,Mode=TwoWay}"
                              x:Name="pInstall" HorizontalOptions="FillAndExpand"/>
 
 
-                    <Grid RowDefinitions="0.5*,*,0.5*,*" ColumnDefinitions="*,*,*">
+                        <Grid RowDefinitions="0.3*,0.5*,0.3*,0.5*" ColumnDefinitions="*,*,*">
                         <Label Text="Duct Plug" />
-                        <local:Dropdown x:Name="isPlugged" Grid.Row="1" />
+                            <local:Dropdown x:Name="isPlugged" Grid.Row="1" SelectedItem="{Binding IsPlugged, Mode=TwoWay }">
+                                <Picker.Items>
+                                    <x:String>Y</x:String>
+                                    <x:String>N</x:String>
+                                </Picker.Items>
+                        </local:Dropdown>
 
                         <Label Text="IsOpen or filled" Grid.Column="1"/>
-                        <local:Dropdown x:Name="isOpen" Grid.Row="1" Grid.Column="1"/>
+                            <local:Dropdown x:Name="isOpen" Grid.Row="1" Grid.Column="1" SelectedItem="{Binding IsOpen, Mode=TwoWay}">
+                            <Picker.Items>
+                                <x:String>Y</x:String>
+                                <x:String>N</x:String>
+                            </Picker.Items>                                
+                        </local:Dropdown>
 
                         <Label Text="HasPullTape" Grid.Column="2"/>
-                        <local:Dropdown x:Name="hasPullTape" Grid.Row="1" Grid.Column="2"/>
+                            <local:Dropdown x:Name="hasPullTape" Grid.Row="1" Grid.Column="2" SelectedItem="{Binding HasPullTape, Mode=TwoWay}">
+                            <Picker.Items>
+                            <x:String>Y</x:String>
+                            <x:String>N</x:String>
+                        </Picker.Items>
+                        </local:Dropdown>
 
                         <Label Text="Has Inner Duct" Grid.Row="2"  />
-                        <local:Dropdown x:Name="hasInnerDuct" Grid.Row="3"  />
+                            <local:Dropdown x:Name="hasInnerDuct" Grid.Row="3" SelectedItem="{Binding HasInnerDuct, Mode=TwoWay}">
+                            <Picker.Items>
+                            <x:String>Y</x:String>
+                            <x:String>N</x:String>
+                        </Picker.Items>
+                        </local:Dropdown>
 
                         <Label Text="Has Trace Wire" Grid.Row="2"   Grid.Column="1" />
-                        <local:Dropdown x:Name="hasTraceWire" Grid.Row="3"  Grid.Column="1" />
-                
+                            <local:Dropdown x:Name="hasTraceWire" Grid.Row="3"  Grid.Column="1" SelectedItem="{Binding HasTraceWire, Mode=TwoWay}">
+                            <Picker.Items>
+                                <x:String>Y</x:String>
+                                <x:String>N</x:String>
+                            </Picker.Items>
+                        </local:Dropdown>
+
                         <Label Text="% Open" Grid.Row="2"   Grid.Column="2" />
-                        <local:Dropdown x:Name="percentOpen" Grid.Row="3"  Grid.Column="2" />
+                            <local:Dropdown x:Name="percentOpen" Grid.Row="3"  Grid.Column="2" SelectedItem="{Binding PercentOpen, Mode=TwoWay}" >
+                            <Picker.Items>
+                                    <x:String>100</x:String>
+                                    <x:String>99</x:String>
+                                    <x:String>98</x:String>
+                                    <x:String>97</x:String>
+                                    <x:String>96</x:String>
+                                    <x:String>95</x:String>
+                                    <x:String>94</x:String>
+                                    <x:String>93</x:String>
+                                    <x:String>92</x:String>
+                                    <x:String>91</x:String>
+                                    <x:String>90</x:String>
+                                </Picker.Items>
+                        </local:Dropdown>
 
-                    </Grid>
+                        </Grid>
 
-                    <Button Text="Record Inner Duct" x:Name="btnRecInner" Clicked="btnRecInner_Clicked"/>
+                    <Button Text="Record Inner Duct" Command="{Binding SetupInnerDuctCommand}"/>
+
+                        <Button Text="Save and Continue" Command="{Binding SaveCommand}"/>
+
+                        <Button Text="Finished Duct Recording" Command="{Binding SaveBackCommand}"/>
+
+
+                    <!--<Button Text="Record Inner Duct" x:Name="btnRecInner" Clicked="btnRecInner_Clicked"/>
 
                     <Button Text="Save and Continue" x:Name="btnSaveStart" Clicked="btnSaveStart_Clicked"/>
 
-                    <Button Text="Finished Duct Recording" x:Name="btnFinishDRect" Clicked="btnFinishDRect_Clicked"/>                        
+                    <Button Text="Finished Duct Recording" x:Name="btnFinishDRect" Clicked="btnFinishDRect_Clicked"/>-->                    
                     </StackLayout>
 
                 </ScrollView>
