--- a/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FTCollectorApp.Utils"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              x:Class="FTCollectorApp.View.TraceFiberPages.FiberOpticCablePage">
     <ContentPage.Content>
         <ScrollView>
@@ -11,11 +12,11 @@
                 <local:Dropdown x:Name="pCableId" HorizontalOptions="FillAndExpand" 
                                 ItemsSource="{Binding aFiberCableList}"
                                 ItemDisplayBinding="{Binding CableIdDesc}"
-                                SelectedItem="{Binding SelectedFiberCable, Mode=TwoWay}"
+                                SelectedItem="{Binding SelectedFiberCable, Mode=TwoWay, FallbackValue=''}"
                                                             Title="Select  Fiber Cable"
                             TitleColor="Gray" />
                 <local:BorderEntry Placeholder="Enter cable id" PlaceholderColor="Gray" x:Name="nwCableName" IsVisible="false" 
-                                   Text="{Binding NewCableName, Mode=TwoWay}">
+                                   Text="{Binding NewCableName, Mode=TwoWay,FallbackValue=''}">
                     <Entry.Triggers>
 
                         <DataTrigger TargetType="Entry"
@@ -32,19 +33,20 @@
                 <Label Text="Cable Type" HorizontalOptions="Start" />
 
             <local:Dropdown x:Name="pCableType" HorizontalOptions="FillAndExpand"
+                            SelectedItem="{Binding SelectedCableType, Mode=TwoWay, FallbackValue=''}"
                             ItemsSource="{Binding CableTypeList}" 
                             ItemDisplayBinding="{Binding CodeCableDesc}"/>
             <Label Text="Manufacturer" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pManufacturer" HorizontalOptions="FillAndExpand"
                             ItemsSource="{Binding ManufacturerList} " 
-                            SelectedItem="{Binding SelectedManufacturer, Mode=TwoWay}"
+                            SelectedItem="{Binding SelectedManufacturer, Mode=TwoWay, FallbackValue=''}"
                             ItemDisplayBinding="{Binding ManufName}"
                             Title="--Select  Manufacturer--"
                             TitleColor="Gray" />
                 <Label Text="Model" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pModel" 
                            ItemsSource="{Binding ModelDetailList}" 
-                            SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay}"
+                            SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay, FallbackValue=''}"
                             ItemDisplayBinding="{Binding ModelNumber}"
                             HorizontalOptions="FillAndExpand"
                             Title="--Select  Model--"
@@ -117,7 +119,7 @@
                 <local:Dropdown x:Name="pMultimodeDia" 
                                 ItemsSource="{Binding ClrCodeList}" ItemDisplayBinding="{Binding ClrName}"
                                 BackgroundColor="{Binding SelectedColor.ClrHex}"
-                                SelectedItem="{Binding SelectedColor, Mode=TwoWay}"
+                                SelectedItem="{Binding SelectedColor, Mode=TwoWay, FallbackValue=''}"
                                 HorizontalOptions="FillAndExpand"
                                 Title="--Select  Color--"
                                 TitleColor="Gray"
@@ -126,27 +128,26 @@
                 <Label Text="Sheath Type" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pSheathTpe" HorizontalOptions="FillAndExpand"
                             ItemsSource="{Binding SheathList}" 
-                            SelectedItem="{Binding SelectedSheath, Mode=TwoWay}"
+                            SelectedItem="{Binding SelectedSheath, Mode=TwoWay, FallbackValue=''}"
                             ItemDisplayBinding="{Binding SheathType}"/>
             <Label Text="Manufactured at" HorizontalOptions="Start" />
-            <DatePicker x:Name="pManufacturedAt" HorizontalOptions="FillAndExpand" 
-                        Date="{Binding SelectedManufacturedDate, Mode=TwoWay, StringFormat=Date: {0:yyyy-MM-dd}}"
+            <DatePicker HorizontalOptions="FillAndExpand" 
+                        Date="{Binding SelectedManufacturedDate, Mode=TwoWay, Source={x:Static system:DateTime.Now},StringFormat=Date: {0:yyyy-MM-dd}}"                       
                         />
             <Label Text="Enter reel id" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pReelId" 
-                            ItemsSource="{Binding ReelIdList}" 
+            <local:Dropdown ItemsSource="{Binding ReelIdList}" 
                             ItemDisplayBinding="{Binding ReelNumber}" 
-                            SelectedItem="{Binding SelectedReelId, Mode=TwoWay}"
+                            SelectedItem="{Binding SelectedReelId, Mode=TwoWay, FallbackValue=''}"
                             HorizontalOptions="FillAndExpand"/>
             <Label Text="Installed at" HorizontalOptions="Start" />
-            <DatePicker x:Name="pInstalledAt" HorizontalOptions="FillAndExpand" 
-                        Date="{Binding SelectedInstalledAt, Mode=TwoWay ,StringFormat=Date: {0:yyyy-MM-dd}}"
+            <DatePicker HorizontalOptions="FillAndExpand" 
+                        Date="{Binding SelectedInstalledAt, Mode=TwoWay , Source={x:Static system:DateTime.Now}, StringFormat=Date: {0:yyyy-MM-dd}}"
                        />
             <Label Text="Install Type" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pInstallType" HorizontalOptions="FillAndExpand"
+            <local:Dropdown HorizontalOptions="FillAndExpand"
                              ItemsSource="{Binding InstallTypeList}" 
                             ItemDisplayBinding="{Binding FbrInstallDesc}" 
-                            SelectedItem="{Binding SelectedInstallType, Mode=TwoWay}"                           
+                            SelectedItem="{Binding SelectedInstallType, Mode=TwoWay, FallbackValue=''}"                           
                             
                             />
                 <Button x:Name="btnSave"  Text="Save and Continue" HorizontalOptions="FillAndExpand" Command="{Binding SaveCommand}"/>
