--- a/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
+++ b/FTCollectorApp/View/SitesPage/BuildingSitePage.xaml
@@ -40,7 +40,7 @@
                             <Label Grid.Row="0" Grid.Column="0"  Text="Lane closure required"/>
                             <Label Grid.Row="0" Grid.Column="1" Text="Enter the dot disctrict"/>
                             <Label Grid.Row="0" Grid.Column="2" Text="Has Power disconnect"/>
-                            <local:Dropdown Grid.Row="1" Grid.Column="0" x:Name="pickerLaneClosure" SelectedItem="{Binding Converter={StaticResource YesNoToOneZeroConverter}}"/>
+                            <local:Dropdown Grid.Row="1" Grid.Column="0" x:Name="pickerLaneClosure" />
                             <local:Dropdown Grid.Row="1" Grid.Column="1" x:Name="pickerDotDisctrict"/>
                             <local:Dropdown Grid.Row="1" Grid.Column="2" x:Name="pickerHasPowerDisconnect"/>
                             <Label Grid.Row="2" Grid.Column="0" Text="Enter electric site key"/>
