--- a/FTCollectorApp/View/SitesPage/RacksPage.xaml
+++ b/FTCollectorApp/View/SitesPage/RacksPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:FTCollectorApp.Utils"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+                          xmlns:fa="clr-namespace:FontAwesome"
+             xmlns:local="clr-namespace:FTCollectorApp.Utils"
              x:Class="FTCollectorApp.View.SitesPage.RacksPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem  Clicked="btnCamera" IconImageSource="cam_white.png" 
@@ -26,7 +28,7 @@
                                     ItemsSource="{Binding RackKeyList}" />
 
                         <Button Grid.Column="1" Text="{x:Static fa:FontAwesomeIcons.List}"
-                                FontFamily="{StaticResource FontAwesomeSolid}" Command="{Binding RefreshDuctKeyListCommand}"
+                                FontFamily="{StaticResource FontAwesomeSolid}" Command="{Binding RefreshRackKeyListCommand}"
                                 />
                     </Grid>
 
